# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-218f928b638d7f8216443c1b865a0292968fa429c79f00dd5532e9089f1a8101.json  query-31d5980f04892678c6f9ebd24dd106561226702fdecd84f0f033ff37387db73c.json  query-867972c5a173ddbadc9ab7190fd37f0f253f6d9f44653649a3f2c508abaad5ae.json  query-adc0b0b14ff2f894dd04bf46070ae81f1b2588c91b816fc5e724536d5d494eab.json  query-bd4b20790b2e38c80551ad524f69df4c298e7d4f9c7360411011a36caed74244.json  query-c14f99e0d7df6e58269befa333a2d0bbc4f430fb69d692650622663e98aa21e1.json
configuration/: production.yaml
migrations/: 20260119234527_make_status_not_null_in_subscriptions.sql  20260129133144_seed_user.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
