[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
fake = "4.4.0"
wiremock = "0.6"
serde_json = "1.0.61"
serde_urlencoded = "0.7.1"
linkify = "0.10"
claims = "0.8.0"
tokio = { version = "1", features = ["rt"]}

[dependencies]
actix-web = "4.12.1"
config = "0.15.19"
serde = "1.0.228"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.49.0", features = ["macros","rt-multi-thread"]}
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
reqwest = { version = "0.13.1", default-features = false, features = [
    "json",
    "default-tls",
    "cookies",
] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
thiserror = "2.0.18"
serde-aux = "4"
unicode-segmentation = "1.7.1"
rand = { version = "0.9.2", features = ["std_rng"] }
anyhow = "1.0.40"
base64 = "0.22.1"
argon2 = { version = "0.5", features = ["std"] }
validator = "0.20.0"
tracing-log = "0.2.0"
tracing-actix-web = "0.7.21"
secrecy = { version = "0.10.3", features = ["serde"] }
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
serde_json = "1"
actix-files = "0.6.9"
